--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/css/style.css" />
     <title>Pokedex</title>
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="icon" href="./assets/img/pokeball.png" />
+
+    <script defer src="/js/script.js"></script>
   </head>
   <body>
     <main>
@@ -26,7 +28,6 @@
       </div>
 
       <img class="pokedex" src="./assets/img/pokedex.png" alt="" />
-      <script src="/js/script.js"></script>
     </main>
   </body>
 </html>
