--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Pokedex</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./assets/img/pokeball.png" />
 
-    <script defer src="/js/script.js"></script>
+    <script defer src="./js/script.js"></script>
   </head>
   <body>
     <main>
