feat:animated img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <main>
-      <img src="" class="pokemon-img" alt="" />
+      <div class="img-container">
+        <img src="" class="pokemon-img" alt="" />
+      </div>
       <h1 class="pokemon-data">
         <span class="poke-num"></span>
         <span class="poke-name"></span>
