--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <script defer src="./js/script.js"></script>
   </head>
   <body>
+    <header>
+      <nav class="nav-pikachu">
+        <img class="pikachu" src="/assets/img/pikachu.gif" alt="" />
+      </nav>
+    </header>
+
     <main>
       <div class="img-container">
         <img src="" class="pokemon-img" alt="" />
