feat:pikachu pet fixed

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <script defer src="./js/script.js"></script>
   </head>
   <body>
-    <header>
-      <nav class="nav-pikachu">
-        <img class="pikachu" src="/assets/img/pikachu.gif" alt="" />
+    <!-- <header class="nav-pikachu">
+      <nav class="container-pikachu">
+        
       </nav>
-    </header>
+    </header> -->
 
     <main>
+      <img class="pikachu" src="/assets/img/pikachu.gif" alt="" />
       <div class="img-container">
         <img src="" class="pokemon-img" alt="" />
       </div>
